# stark

./: Cargo.toml  README.md
site/_layouts/: default.html
site/_pages/: index.html
src/: front_matter.rs  main.rs
test/: config.toml
test/_layouts/: default.html
test/pages/: about.html  index.html
test/public/: about.html  index.html
test/public/posts/: 2020-01-15-hello.md
