[package]
name = "rave"
version = "0.1.0"
authors = ["Matthew Blode <m@blode.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
lazy_static = "1.4"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
yaml-rust = "0.4"
walkdir = "2"
heck = "0.3"
