[package]
name = "stark"
version = "0.1.1"
authors = ["Matthew Blode <m@blode.co>"]
edition = "2018"
description = "Stark is a blazingly fast static site generator"
documentation = "https://docs.rs/stark"
readme = "README.md"
repository = "https://github.com/mblode/stark/"
license = "MIT"
keywords = ["static-site", "generator", "jekyll", "hugo", "zola"]
categories = ["command-line-utilities"]

[dependencies]
tera = "1"
lazy_static = "1.4"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
yaml-rust = "0.4"
walkdir = "2"
heck = "0.3"
